fix slider size on mobile and tablet screen sizes

--- a/my-app/src/components/ProductOverview/ProductOverview.module.css
+++ b/my-app/src/components/ProductOverview/ProductOverview.module.css
@@ -1,9 +1,8 @@
 .product-overview {
     width: 100%;
     padding-block: 21px 32px;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: start;
+    display: flex;
+    flex-direction: column;
     gap: 32px;
 
     @media screen and (width >= 744px) {
@@ -12,7 +11,7 @@
     }
 
     @media screen and (width >= 1280px) {
-        grid-template-columns: repeat(2, 1fr);
+        flex-direction: row;
         padding-block: 72px 80px;
         gap: 0;
     }
